# MLO_project

./: .gitattributes  .gitignore  Dockerfile  Makefile  README.md  README_other.md  Rice_Image_Dataset.dvc  data.py  env.txt  environment.yml  main.py  pyproject.toml  requirements.txt  requirements_tests.txt  setup.py  upload.py  wandb.dockerfile
.dvc/: config
.github/workflows/: deploy.yml  tests.yml
Rice_Image_Dataset/: Rice_Citation_Request.txt
config/: config.yaml
config/timmL/: config.yaml
config/timm_J/: config.yaml
config/timma1/: config.yaml
docs/: Makefile  conf.py  index.rst  make.bat
models/: model_best.pth.tar
models/model.pth/: data.pkl
models/model.pth/data/: 0  1  10  100  102  103  104  105  106  108  109  110  111  112  114  115  116  117  118  12  120  121  122  123  124  126  127  128  129  13  130  132  133  134  135  136  138  139  14  140  (+367 more)
reports/: README.md  report.html
src/api/: main.py
src/models/: predict_model.py  train_model.py
templates/: base.html
tests/: test_data.py  test_inference.py  test_main.py  test_trainer.py
